Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-10033] GSB crash: All constraints were self-derived #52436

Closed
slavapestov opened this issue Mar 2, 2019 · 1 comment
Closed

[SR-10033] GSB crash: All constraints were self-derived #52436

slavapestov opened this issue Mar 2, 2019 · 1 comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software

Comments

@slavapestov
Copy link
Member

Previous ID SR-10033
Radar None
Original Reporter @slavapestov
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, CompilerCrash
Assignee None
Priority Medium

md5: 6294243eb754a8eedb2f910242b57e54

is duplicated by:

Issue Description:

Reduced a test case for the second crash in https://bugs.swift.org/browse/SR-10023:

protocol P1 {
    associatedtype A2 : P2 where A2.A1 == Self
}

protocol P2 {
    associatedtype A1 : P1 where A1.A2 == Self
    var property: Int { get }
}

extension P2 {
    var property: Int { return 0 }
}

class C1 : P1 {
    class A2 : P2 {
        typealias A1 = C1
    }
}
@slavapestov
Copy link
Member Author

#36746

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software
Projects
None yet
Development

No branches or pull requests

2 participants